[package]
name = "aprshttp"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "One-way APRS position reporting using APRS-IS"
documentation = "https://docs.rs/aprshttp"
readme = "README.md"
homepage = "https://github.com/ewpratten/aprshttp"
repository = "https://github.com/ewpratten/aprshttp"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
clap = "2.33"
aprs-encode = "^0.1.2"
arrayvec = "0.7"
callpass = "1.0"